  both branches, we know that the trunk for the project can be read too,
  so the upgrade will not inconvenience users. (Robert Collins, #345169)

* The GNU Changelog formatter is slightly improved in the case where
  the delta is empty, and now correctly claims not to support tags.
  (Andrea Bolognani)

* Shelve can now shelve changes to a symlink target.
  (James Westby, #341558)

* The help for the ``info`` command has been corrected.
  (Ian Clatworthy, #351931)

* Upgrade will now use a sensible default format if the source repository
  uses rich roots.  (Jelmer Vernooij, #252908)

Documentation
*************

* Expanded the index of the developer documentation. (Eric Siegerman)

* New topic `bzr help debug-flags`.  (Martin Pool)

* The generated manpage now explicitly lists aliases as commands.
  (James Westby, #336998)

API Changes
***********

* APIs deprecated in 1.6 and previous versions of bzr are now removed.
  (Martin Pool)

* ``CommitReporter`` is no longer called with ``unchanged`` status during
  commit - this was a full-tree overhead that bzr no longer performs.
  (Robert Collins)

* New abstract ``UIFactory`` method ``get_username`` which will be called to 
  obtain the username to use when connecting to remote machines. 
  (Jelmer Vernooij)

* New API ``Inventory.filter()`` added that filters an inventory by
  a set of file-ids so that only those fileids, their parents and
  their children are included.  (Ian Clatworthy)

* New sort order for ``get_record_stream`` ``groupcompress`` which
  sorts optimally for use with groupcompress compressors. (John Arbash
  Meinel, Robert Collins)

* Repository APIs ``get_deltas_for_revisions()`` and
  ``get_revision_delta()`` now support an optional ``specific_fileids``
  parameter. If provided, the deltas are filtered so that only those
  file-ids, their parents and their children are included.
  (Ian Clatworthy)

* The ``get_credentials`` and ``set_credentials`` methods of 